<resources>
    <string name="app_name">ClgApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="aec">AEC</string>
    <string name="title_activity_loged_in">LogedIN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="secures">Secured</string>
    <string name="total">Total</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attended">Attended</string>
    <string name="_98">98</string>
    <string name="_100">100</string>
    <string name="maths">Maths</string>
    <string name="title_activity_maps">Map</string>
    <string name="coordinates">Coordinates</string>
    <string name="calender">Calender</string>
    <string name="attendence">Attendence</string>
    <string name="marks">Marks</string>
    <string name="forum">Forum</string>
</resources>
